finish background-size

--- a/crowdfunding-product-page-main/index.html
+++ b/crowdfunding-product-page-main/index.html
@@ -16,9 +16,16 @@
   </style>
 </head>
 <body>
-  About
-  Discover
-  Get Started
+  <header>
+    <!-- crowdfund logo -->
+  
+    
+      <!-- Burger Menu -->
+    <!-- About
+    Discover
+    Get Started -->
+
+  </header>
 
   Mastercraft Bamboo Monitor Riser
   A beautiful & handcrafted monitor stand to reduce neck and eye strain.
