--- a/crowdfunding-product-page-main/index.html
+++ b/crowdfunding-product-page-main/index.html
@@ -27,6 +27,7 @@
 
   </header>
 
+  <!-- Add semantic html -->
   Mastercraft Bamboo Monitor Riser
   A beautiful & handcrafted monitor stand to reduce neck and eye strain.
 
